// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayMedia:  renders a snapshot of <PlayMedia /> with mock props when open and closePlay are both false  1`] = `
<PlayMedia
  closePlay={false}
  open={false}
  source="http://mockAudioSource.com"
  type="audio"
>
  <Modal
    closable={false}
    confirmLoading={false}
    footer={null}
    okType="primary"
    onCancel={[Function]}
    title={null}
    visible={true}
    width={520}
  >
    <Dialog
      closable={false}
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <ForwardRef(CloseOutlined)
            className="ant-modal-close-icon"
          />
        </span>
      }
      confirmLoading={false}
      focusTriggerAfterClose={true}
      footer={null}
      maskTransitionName="ant-fade"
      okType="primary"
      onCancel={[Function]}
      onClose={[Function]}
      prefixCls="ant-modal"
      title={null}
      transitionName="ant-zoom"
      visible={true}
      width={520}
      wrapClassName=""
    >
      <PortalWrapper
        visible={true}
      >
        <ForwardRef
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div
                  class="ant-modal-root"
                >
                  <div
                    class="ant-modal-mask"
                  />
                  <div
                    class="ant-modal-wrap"
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      class="ant-modal"
                      role="document"
                      style="width: 520px;"
                    >
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                      <div
                        class="ant-modal-content"
                      >
                        <div
                          class="ant-modal-body"
                        >
                          <audio
                            controls=""
                            src="http://mockAudioSource.com"
                          />
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              afterClose={[Function]}
              closable={false}
              closeIcon={
                <span
                  className="ant-modal-close-x"
                >
                  <ForwardRef(CloseOutlined)
                    className="ant-modal-close-icon"
                  />
                </span>
              }
              confirmLoading={false}
              destroyOnClose={false}
              focusTriggerAfterClose={true}
              footer={null}
              getContainer={[Function]}
              getOpenCount={[Function]}
              maskTransitionName="ant-fade"
              okType="primary"
              onCancel={[Function]}
              onClose={[Function]}
              prefixCls="ant-modal"
              scrollLocker={
                ScrollLocker {
                  "getContainer": [Function],
                  "lock": [Function],
                  "lockTarget": 0,
                  "options": Object {
                    "container": <body
                      class="ant-scrolling-effect"
                      style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                    >
                      <div>
                        <div
                          class="ant-modal-root"
                        >
                          <div
                            class="ant-modal-mask"
                          />
                          <div
                            class="ant-modal-wrap"
                            role="dialog"
                            tabindex="-1"
                          >
                            <div
                              class="ant-modal"
                              role="document"
                              style="width: 520px;"
                            >
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                              <div
                                class="ant-modal-content"
                              >
                                <div
                                  class="ant-modal-body"
                                >
                                  <audio
                                    controls=""
                                    src="http://mockAudioSource.com"
                                  />
                                </div>
                              </div>
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </body>,
                  },
                  "reLock": [Function],
                  "unLock": [Function],
                }
              }
              switchScrollingEffect={[Function]}
              title={null}
              transitionName="ant-zoom"
              visible={true}
              width={520}
              wrapClassName=""
            >
              <div
                className="ant-modal-root"
              >
                <Mask
                  motionName="ant-fade"
                  prefixCls="ant-modal"
                  style={
                    Object {
                      "zIndex": undefined,
                    }
                  }
                  visible={true}
                >
                  <CSSMotion
                    key="mask"
                    leavedClassName="ant-modal-mask-hidden"
                    motionName="ant-fade"
                    visible={true}
                  >
                    <DomWrapper>
                      <div
                        className="ant-modal-mask"
                        style={
                          Object {
                            "zIndex": undefined,
                          }
                        }
                      />
                    </DomWrapper>
                  </CSSMotion>
                </Mask>
                <div
                  aria-labelledby={null}
                  className="ant-modal-wrap"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "display": null,
                      "zIndex": undefined,
                    }
                  }
                  tabIndex={-1}
                >
                  <Content
                    afterClose={[Function]}
                    ariaId="rcDialogTitle0"
                    closable={false}
                    closeIcon={
                      <span
                        className="ant-modal-close-x"
                      >
                        <ForwardRef(CloseOutlined)
                          className="ant-modal-close-icon"
                        />
                      </span>
                    }
                    confirmLoading={false}
                    destroyOnClose={false}
                    focusTriggerAfterClose={true}
                    footer={null}
                    getContainer={[Function]}
                    getOpenCount={[Function]}
                    maskTransitionName="ant-fade"
                    motionName="ant-zoom"
                    okType="primary"
                    onCancel={[Function]}
                    onClose={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onVisibleChanged={[Function]}
                    prefixCls="ant-modal"
                    scrollLocker={
                      ScrollLocker {
                        "getContainer": [Function],
                        "lock": [Function],
                        "lockTarget": 0,
                        "options": Object {
                          "container": <body
                            class="ant-scrolling-effect"
                            style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                          >
                            <div>
                              <div
                                class="ant-modal-root"
                              >
                                <div
                                  class="ant-modal-mask"
                                />
                                <div
                                  class="ant-modal-wrap"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="ant-modal"
                                    role="document"
                                    style="width: 520px;"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="ant-modal-content"
                                    >
                                      <div
                                        class="ant-modal-body"
                                      >
                                        <audio
                                          controls=""
                                          src="http://mockAudioSource.com"
                                        />
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </body>,
                        },
                        "reLock": [Function],
                        "unLock": [Function],
                      }
                    }
                    switchScrollingEffect={[Function]}
                    title={null}
                    transitionName="ant-zoom"
                    visible={true}
                    width={520}
                    wrapClassName=""
                  >
                    <CSSMotion
                      motionName="ant-zoom"
                      onAppearPrepare={[Function]}
                      onEnterPrepare={[Function]}
                      onVisibleChanged={[Function]}
                      removeOnLeave={false}
                      visible={true}
                    >
                      <DomWrapper>
                        <div
                          className="ant-modal"
                          key="dialog-element"
                          onMouseDown={[Function]}
                          onMouseUp={[Function]}
                          role="document"
                          style={
                            Object {
                              "width": 520,
                            }
                          }
                        >
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                          <Component
                            shouldUpdate={true}
                          >
                            <div
                              className="ant-modal-content"
                            >
                              <div
                                className="ant-modal-body"
                              >
                                <audio
                                  controls={true}
                                  src="http://mockAudioSource.com"
                                />
                              </div>
                            </div>
                          </Component>
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                        </div>
                      </DomWrapper>
                    </CSSMotion>
                  </Content>
                </div>
              </div>
            </Dialog>
          </Portal>
        </ForwardRef>
      </PortalWrapper>
    </Dialog>
  </Modal>
</PlayMedia>
`;

exports[`PlayMedia:  renders a snapshot of <PlayMedia /> with mock props when open and closePlay are both true 1`] = `
<PlayMedia
  closePlay={true}
  open={true}
  source="http://mockAudioSource.com"
  type="audio"
>
  <Modal
    closable={false}
    confirmLoading={false}
    footer={null}
    okType="primary"
    onCancel={[Function]}
    title={null}
    visible={true}
    width={520}
  >
    <Dialog
      closable={false}
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <ForwardRef(CloseOutlined)
            className="ant-modal-close-icon"
          />
        </span>
      }
      confirmLoading={false}
      focusTriggerAfterClose={true}
      footer={null}
      maskTransitionName="ant-fade"
      okType="primary"
      onCancel={[Function]}
      onClose={[Function]}
      prefixCls="ant-modal"
      title={null}
      transitionName="ant-zoom"
      visible={true}
      width={520}
      wrapClassName=""
    >
      <PortalWrapper
        visible={true}
      >
        <ForwardRef
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div
                  class="ant-modal-root"
                >
                  <div
                    class="ant-modal-mask"
                  />
                  <div
                    class="ant-modal-wrap"
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      class="ant-modal"
                      role="document"
                      style="width: 520px;"
                    >
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                      <div
                        class="ant-modal-content"
                      >
                        <div
                          class="ant-modal-body"
                        >
                          <audio
                            controls=""
                            src="http://mockAudioSource.com"
                          />
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              afterClose={[Function]}
              closable={false}
              closeIcon={
                <span
                  className="ant-modal-close-x"
                >
                  <ForwardRef(CloseOutlined)
                    className="ant-modal-close-icon"
                  />
                </span>
              }
              confirmLoading={false}
              destroyOnClose={false}
              focusTriggerAfterClose={true}
              footer={null}
              getContainer={[Function]}
              getOpenCount={[Function]}
              maskTransitionName="ant-fade"
              okType="primary"
              onCancel={[Function]}
              onClose={[Function]}
              prefixCls="ant-modal"
              scrollLocker={
                ScrollLocker {
                  "getContainer": [Function],
                  "lock": [Function],
                  "lockTarget": 3,
                  "options": Object {
                    "container": <body
                      class="ant-scrolling-effect"
                      style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                    >
                      <div>
                        <div
                          class="ant-modal-root"
                        >
                          <div
                            class="ant-modal-mask"
                          />
                          <div
                            class="ant-modal-wrap"
                            role="dialog"
                            tabindex="-1"
                          >
                            <div
                              class="ant-modal"
                              role="document"
                              style="width: 520px;"
                            >
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                              <div
                                class="ant-modal-content"
                              >
                                <div
                                  class="ant-modal-body"
                                >
                                  <audio
                                    controls=""
                                    src="http://mockAudioSource.com"
                                  />
                                </div>
                              </div>
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div
                          class="ant-modal-root"
                        >
                          <div
                            class="ant-modal-mask"
                          />
                          <div
                            class="ant-modal-wrap"
                            role="dialog"
                            tabindex="-1"
                          >
                            <div
                              class="ant-modal"
                              role="document"
                              style="width: 520px;"
                            >
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                              <div
                                class="ant-modal-content"
                              >
                                <div
                                  class="ant-modal-body"
                                >
                                  <audio
                                    controls=""
                                    src="http://mockAudioSource.com"
                                  />
                                </div>
                              </div>
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div
                          class="ant-modal-root"
                        >
                          <div
                            class="ant-modal-mask"
                          />
                          <div
                            class="ant-modal-wrap"
                            role="dialog"
                            tabindex="-1"
                          >
                            <div
                              class="ant-modal"
                              role="document"
                              style="width: 520px;"
                            >
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                              <div
                                class="ant-modal-content"
                              >
                                <div
                                  class="ant-modal-body"
                                >
                                  <audio
                                    controls=""
                                    src="http://mockAudioSource.com"
                                  />
                                </div>
                              </div>
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div
                          class="ant-modal-root"
                        >
                          <div
                            class="ant-modal-mask"
                          />
                          <div
                            class="ant-modal-wrap"
                            role="dialog"
                            tabindex="-1"
                          >
                            <div
                              class="ant-modal"
                              role="document"
                              style="width: 520px;"
                            >
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                              <div
                                class="ant-modal-content"
                              >
                                <div
                                  class="ant-modal-body"
                                >
                                  <audio
                                    controls=""
                                    src="http://mockAudioSource.com"
                                  />
                                </div>
                              </div>
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </body>,
                  },
                  "reLock": [Function],
                  "unLock": [Function],
                }
              }
              switchScrollingEffect={[Function]}
              title={null}
              transitionName="ant-zoom"
              visible={true}
              width={520}
              wrapClassName=""
            >
              <div
                className="ant-modal-root"
              >
                <Mask
                  motionName="ant-fade"
                  prefixCls="ant-modal"
                  style={
                    Object {
                      "zIndex": undefined,
                    }
                  }
                  visible={true}
                >
                  <CSSMotion
                    key="mask"
                    leavedClassName="ant-modal-mask-hidden"
                    motionName="ant-fade"
                    visible={true}
                  >
                    <DomWrapper>
                      <div
                        className="ant-modal-mask"
                        style={
                          Object {
                            "zIndex": undefined,
                          }
                        }
                      />
                    </DomWrapper>
                  </CSSMotion>
                </Mask>
                <div
                  aria-labelledby={null}
                  className="ant-modal-wrap"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "display": null,
                      "zIndex": undefined,
                    }
                  }
                  tabIndex={-1}
                >
                  <Content
                    afterClose={[Function]}
                    ariaId="rcDialogTitle3"
                    closable={false}
                    closeIcon={
                      <span
                        className="ant-modal-close-x"
                      >
                        <ForwardRef(CloseOutlined)
                          className="ant-modal-close-icon"
                        />
                      </span>
                    }
                    confirmLoading={false}
                    destroyOnClose={false}
                    focusTriggerAfterClose={true}
                    footer={null}
                    getContainer={[Function]}
                    getOpenCount={[Function]}
                    maskTransitionName="ant-fade"
                    motionName="ant-zoom"
                    okType="primary"
                    onCancel={[Function]}
                    onClose={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onVisibleChanged={[Function]}
                    prefixCls="ant-modal"
                    scrollLocker={
                      ScrollLocker {
                        "getContainer": [Function],
                        "lock": [Function],
                        "lockTarget": 3,
                        "options": Object {
                          "container": <body
                            class="ant-scrolling-effect"
                            style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                          >
                            <div>
                              <div
                                class="ant-modal-root"
                              >
                                <div
                                  class="ant-modal-mask"
                                />
                                <div
                                  class="ant-modal-wrap"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="ant-modal"
                                    role="document"
                                    style="width: 520px;"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="ant-modal-content"
                                    >
                                      <div
                                        class="ant-modal-body"
                                      >
                                        <audio
                                          controls=""
                                          src="http://mockAudioSource.com"
                                        />
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div>
                              <div
                                class="ant-modal-root"
                              >
                                <div
                                  class="ant-modal-mask"
                                />
                                <div
                                  class="ant-modal-wrap"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="ant-modal"
                                    role="document"
                                    style="width: 520px;"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="ant-modal-content"
                                    >
                                      <div
                                        class="ant-modal-body"
                                      >
                                        <audio
                                          controls=""
                                          src="http://mockAudioSource.com"
                                        />
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div>
                              <div
                                class="ant-modal-root"
                              >
                                <div
                                  class="ant-modal-mask"
                                />
                                <div
                                  class="ant-modal-wrap"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="ant-modal"
                                    role="document"
                                    style="width: 520px;"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="ant-modal-content"
                                    >
                                      <div
                                        class="ant-modal-body"
                                      >
                                        <audio
                                          controls=""
                                          src="http://mockAudioSource.com"
                                        />
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div>
                              <div
                                class="ant-modal-root"
                              >
                                <div
                                  class="ant-modal-mask"
                                />
                                <div
                                  class="ant-modal-wrap"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="ant-modal"
                                    role="document"
                                    style="width: 520px;"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="ant-modal-content"
                                    >
                                      <div
                                        class="ant-modal-body"
                                      >
                                        <audio
                                          controls=""
                                          src="http://mockAudioSource.com"
                                        />
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </body>,
                        },
                        "reLock": [Function],
                        "unLock": [Function],
                      }
                    }
                    switchScrollingEffect={[Function]}
                    title={null}
                    transitionName="ant-zoom"
                    visible={true}
                    width={520}
                    wrapClassName=""
                  >
                    <CSSMotion
                      motionName="ant-zoom"
                      onAppearPrepare={[Function]}
                      onEnterPrepare={[Function]}
                      onVisibleChanged={[Function]}
                      removeOnLeave={false}
                      visible={true}
                    >
                      <DomWrapper>
                        <div
                          className="ant-modal"
                          key="dialog-element"
                          onMouseDown={[Function]}
                          onMouseUp={[Function]}
                          role="document"
                          style={
                            Object {
                              "width": 520,
                            }
                          }
                        >
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                          <Component
                            shouldUpdate={true}
                          >
                            <div
                              className="ant-modal-content"
                            >
                              <div
                                className="ant-modal-body"
                              >
                                <audio
                                  controls={true}
                                  src="http://mockAudioSource.com"
                                />
                              </div>
                            </div>
                          </Component>
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                        </div>
                      </DomWrapper>
                    </CSSMotion>
                  </Content>
                </div>
              </div>
            </Dialog>
          </Portal>
        </ForwardRef>
      </PortalWrapper>
    </Dialog>
  </Modal>
</PlayMedia>
`;

exports[`PlayMedia:  renders a snapshot of <PlayMedia /> with mock props when open is false and closePlay is true  1`] = `
<PlayMedia
  closePlay={true}
  open={false}
  source="http://mockAudioSource.com"
  type="audio"
>
  <Modal
    closable={false}
    confirmLoading={false}
    footer={null}
    okType="primary"
    onCancel={[Function]}
    title={null}
    visible={true}
    width={520}
  >
    <Dialog
      closable={false}
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <ForwardRef(CloseOutlined)
            className="ant-modal-close-icon"
          />
        </span>
      }
      confirmLoading={false}
      focusTriggerAfterClose={true}
      footer={null}
      maskTransitionName="ant-fade"
      okType="primary"
      onCancel={[Function]}
      onClose={[Function]}
      prefixCls="ant-modal"
      title={null}
      transitionName="ant-zoom"
      visible={true}
      width={520}
      wrapClassName=""
    >
      <PortalWrapper
        visible={true}
      >
        <ForwardRef
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div
                  class="ant-modal-root"
                >
                  <div
                    class="ant-modal-mask"
                  />
                  <div
                    class="ant-modal-wrap"
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      class="ant-modal"
                      role="document"
                      style="width: 520px;"
                    >
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                      <div
                        class="ant-modal-content"
                      >
                        <div
                          class="ant-modal-body"
                        >
                          <audio
                            controls=""
                            src="http://mockAudioSource.com"
                          />
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              afterClose={[Function]}
              closable={false}
              closeIcon={
                <span
                  className="ant-modal-close-x"
                >
                  <ForwardRef(CloseOutlined)
                    className="ant-modal-close-icon"
                  />
                </span>
              }
              confirmLoading={false}
              destroyOnClose={false}
              focusTriggerAfterClose={true}
              footer={null}
              getContainer={[Function]}
              getOpenCount={[Function]}
              maskTransitionName="ant-fade"
              okType="primary"
              onCancel={[Function]}
              onClose={[Function]}
              prefixCls="ant-modal"
              scrollLocker={
                ScrollLocker {
                  "getContainer": [Function],
                  "lock": [Function],
                  "lockTarget": 2,
                  "options": Object {
                    "container": <body
                      class="ant-scrolling-effect"
                      style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                    >
                      <div>
                        <div
                          class="ant-modal-root"
                        >
                          <div
                            class="ant-modal-mask"
                          />
                          <div
                            class="ant-modal-wrap"
                            role="dialog"
                            tabindex="-1"
                          >
                            <div
                              class="ant-modal"
                              role="document"
                              style="width: 520px;"
                            >
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                              <div
                                class="ant-modal-content"
                              >
                                <div
                                  class="ant-modal-body"
                                >
                                  <audio
                                    controls=""
                                    src="http://mockAudioSource.com"
                                  />
                                </div>
                              </div>
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div
                          class="ant-modal-root"
                        >
                          <div
                            class="ant-modal-mask"
                          />
                          <div
                            class="ant-modal-wrap"
                            role="dialog"
                            tabindex="-1"
                          >
                            <div
                              class="ant-modal"
                              role="document"
                              style="width: 520px;"
                            >
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                              <div
                                class="ant-modal-content"
                              >
                                <div
                                  class="ant-modal-body"
                                >
                                  <audio
                                    controls=""
                                    src="http://mockAudioSource.com"
                                  />
                                </div>
                              </div>
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div
                          class="ant-modal-root"
                        >
                          <div
                            class="ant-modal-mask"
                          />
                          <div
                            class="ant-modal-wrap"
                            role="dialog"
                            tabindex="-1"
                          >
                            <div
                              class="ant-modal"
                              role="document"
                              style="width: 520px;"
                            >
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                              <div
                                class="ant-modal-content"
                              >
                                <div
                                  class="ant-modal-body"
                                >
                                  <audio
                                    controls=""
                                    src="http://mockAudioSource.com"
                                  />
                                </div>
                              </div>
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </body>,
                  },
                  "reLock": [Function],
                  "unLock": [Function],
                }
              }
              switchScrollingEffect={[Function]}
              title={null}
              transitionName="ant-zoom"
              visible={true}
              width={520}
              wrapClassName=""
            >
              <div
                className="ant-modal-root"
              >
                <Mask
                  motionName="ant-fade"
                  prefixCls="ant-modal"
                  style={
                    Object {
                      "zIndex": undefined,
                    }
                  }
                  visible={true}
                >
                  <CSSMotion
                    key="mask"
                    leavedClassName="ant-modal-mask-hidden"
                    motionName="ant-fade"
                    visible={true}
                  >
                    <DomWrapper>
                      <div
                        className="ant-modal-mask"
                        style={
                          Object {
                            "zIndex": undefined,
                          }
                        }
                      />
                    </DomWrapper>
                  </CSSMotion>
                </Mask>
                <div
                  aria-labelledby={null}
                  className="ant-modal-wrap"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "display": null,
                      "zIndex": undefined,
                    }
                  }
                  tabIndex={-1}
                >
                  <Content
                    afterClose={[Function]}
                    ariaId="rcDialogTitle2"
                    closable={false}
                    closeIcon={
                      <span
                        className="ant-modal-close-x"
                      >
                        <ForwardRef(CloseOutlined)
                          className="ant-modal-close-icon"
                        />
                      </span>
                    }
                    confirmLoading={false}
                    destroyOnClose={false}
                    focusTriggerAfterClose={true}
                    footer={null}
                    getContainer={[Function]}
                    getOpenCount={[Function]}
                    maskTransitionName="ant-fade"
                    motionName="ant-zoom"
                    okType="primary"
                    onCancel={[Function]}
                    onClose={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onVisibleChanged={[Function]}
                    prefixCls="ant-modal"
                    scrollLocker={
                      ScrollLocker {
                        "getContainer": [Function],
                        "lock": [Function],
                        "lockTarget": 2,
                        "options": Object {
                          "container": <body
                            class="ant-scrolling-effect"
                            style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                          >
                            <div>
                              <div
                                class="ant-modal-root"
                              >
                                <div
                                  class="ant-modal-mask"
                                />
                                <div
                                  class="ant-modal-wrap"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="ant-modal"
                                    role="document"
                                    style="width: 520px;"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="ant-modal-content"
                                    >
                                      <div
                                        class="ant-modal-body"
                                      >
                                        <audio
                                          controls=""
                                          src="http://mockAudioSource.com"
                                        />
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div>
                              <div
                                class="ant-modal-root"
                              >
                                <div
                                  class="ant-modal-mask"
                                />
                                <div
                                  class="ant-modal-wrap"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="ant-modal"
                                    role="document"
                                    style="width: 520px;"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="ant-modal-content"
                                    >
                                      <div
                                        class="ant-modal-body"
                                      >
                                        <audio
                                          controls=""
                                          src="http://mockAudioSource.com"
                                        />
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div>
                              <div
                                class="ant-modal-root"
                              >
                                <div
                                  class="ant-modal-mask"
                                />
                                <div
                                  class="ant-modal-wrap"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="ant-modal"
                                    role="document"
                                    style="width: 520px;"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="ant-modal-content"
                                    >
                                      <div
                                        class="ant-modal-body"
                                      >
                                        <audio
                                          controls=""
                                          src="http://mockAudioSource.com"
                                        />
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </body>,
                        },
                        "reLock": [Function],
                        "unLock": [Function],
                      }
                    }
                    switchScrollingEffect={[Function]}
                    title={null}
                    transitionName="ant-zoom"
                    visible={true}
                    width={520}
                    wrapClassName=""
                  >
                    <CSSMotion
                      motionName="ant-zoom"
                      onAppearPrepare={[Function]}
                      onEnterPrepare={[Function]}
                      onVisibleChanged={[Function]}
                      removeOnLeave={false}
                      visible={true}
                    >
                      <DomWrapper>
                        <div
                          className="ant-modal"
                          key="dialog-element"
                          onMouseDown={[Function]}
                          onMouseUp={[Function]}
                          role="document"
                          style={
                            Object {
                              "width": 520,
                            }
                          }
                        >
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                          <Component
                            shouldUpdate={true}
                          >
                            <div
                              className="ant-modal-content"
                            >
                              <div
                                className="ant-modal-body"
                              >
                                <audio
                                  controls={true}
                                  src="http://mockAudioSource.com"
                                />
                              </div>
                            </div>
                          </Component>
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                        </div>
                      </DomWrapper>
                    </CSSMotion>
                  </Content>
                </div>
              </div>
            </Dialog>
          </Portal>
        </ForwardRef>
      </PortalWrapper>
    </Dialog>
  </Modal>
</PlayMedia>
`;

exports[`PlayMedia:  renders a snapshot of <PlayMedia /> with mock props when open is true and closePlay is false  1`] = `
<PlayMedia
  closePlay={false}
  open={true}
  source="http://mockAudioSource.com"
  type="audio"
>
  <Modal
    closable={false}
    confirmLoading={false}
    footer={null}
    okType="primary"
    onCancel={[Function]}
    title={null}
    visible={true}
    width={520}
  >
    <Dialog
      closable={false}
      closeIcon={
        <span
          className="ant-modal-close-x"
        >
          <ForwardRef(CloseOutlined)
            className="ant-modal-close-icon"
          />
        </span>
      }
      confirmLoading={false}
      focusTriggerAfterClose={true}
      footer={null}
      maskTransitionName="ant-fade"
      okType="primary"
      onCancel={[Function]}
      onClose={[Function]}
      prefixCls="ant-modal"
      title={null}
      transitionName="ant-zoom"
      visible={true}
      width={520}
      wrapClassName=""
    >
      <PortalWrapper
        visible={true}
      >
        <ForwardRef
          getContainer={[Function]}
        >
          <Portal
            containerInfo={
              <div>
                <div
                  class="ant-modal-root"
                >
                  <div
                    class="ant-modal-mask"
                  />
                  <div
                    class="ant-modal-wrap"
                    role="dialog"
                    tabindex="-1"
                  >
                    <div
                      class="ant-modal"
                      role="document"
                      style="width: 520px;"
                    >
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                      <div
                        class="ant-modal-content"
                      >
                        <div
                          class="ant-modal-body"
                        >
                          <audio
                            controls=""
                            src="http://mockAudioSource.com"
                          />
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                        tabindex="0"
                      />
                    </div>
                  </div>
                </div>
              </div>
            }
          >
            <Dialog
              afterClose={[Function]}
              closable={false}
              closeIcon={
                <span
                  className="ant-modal-close-x"
                >
                  <ForwardRef(CloseOutlined)
                    className="ant-modal-close-icon"
                  />
                </span>
              }
              confirmLoading={false}
              destroyOnClose={false}
              focusTriggerAfterClose={true}
              footer={null}
              getContainer={[Function]}
              getOpenCount={[Function]}
              maskTransitionName="ant-fade"
              okType="primary"
              onCancel={[Function]}
              onClose={[Function]}
              prefixCls="ant-modal"
              scrollLocker={
                ScrollLocker {
                  "getContainer": [Function],
                  "lock": [Function],
                  "lockTarget": 1,
                  "options": Object {
                    "container": <body
                      class="ant-scrolling-effect"
                      style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                    >
                      <div>
                        <div
                          class="ant-modal-root"
                        >
                          <div
                            class="ant-modal-mask"
                          />
                          <div
                            class="ant-modal-wrap"
                            role="dialog"
                            tabindex="-1"
                          >
                            <div
                              class="ant-modal"
                              role="document"
                              style="width: 520px;"
                            >
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                              <div
                                class="ant-modal-content"
                              >
                                <div
                                  class="ant-modal-body"
                                >
                                  <audio
                                    controls=""
                                    src="http://mockAudioSource.com"
                                  />
                                </div>
                              </div>
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                      <div>
                        <div
                          class="ant-modal-root"
                        >
                          <div
                            class="ant-modal-mask"
                          />
                          <div
                            class="ant-modal-wrap"
                            role="dialog"
                            tabindex="-1"
                          >
                            <div
                              class="ant-modal"
                              role="document"
                              style="width: 520px;"
                            >
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                              <div
                                class="ant-modal-content"
                              >
                                <div
                                  class="ant-modal-body"
                                >
                                  <audio
                                    controls=""
                                    src="http://mockAudioSource.com"
                                  />
                                </div>
                              </div>
                              <div
                                aria-hidden="true"
                                style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                tabindex="0"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </body>,
                  },
                  "reLock": [Function],
                  "unLock": [Function],
                }
              }
              switchScrollingEffect={[Function]}
              title={null}
              transitionName="ant-zoom"
              visible={true}
              width={520}
              wrapClassName=""
            >
              <div
                className="ant-modal-root"
              >
                <Mask
                  motionName="ant-fade"
                  prefixCls="ant-modal"
                  style={
                    Object {
                      "zIndex": undefined,
                    }
                  }
                  visible={true}
                >
                  <CSSMotion
                    key="mask"
                    leavedClassName="ant-modal-mask-hidden"
                    motionName="ant-fade"
                    visible={true}
                  >
                    <DomWrapper>
                      <div
                        className="ant-modal-mask"
                        style={
                          Object {
                            "zIndex": undefined,
                          }
                        }
                      />
                    </DomWrapper>
                  </CSSMotion>
                </Mask>
                <div
                  aria-labelledby={null}
                  className="ant-modal-wrap"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  role="dialog"
                  style={
                    Object {
                      "display": null,
                      "zIndex": undefined,
                    }
                  }
                  tabIndex={-1}
                >
                  <Content
                    afterClose={[Function]}
                    ariaId="rcDialogTitle1"
                    closable={false}
                    closeIcon={
                      <span
                        className="ant-modal-close-x"
                      >
                        <ForwardRef(CloseOutlined)
                          className="ant-modal-close-icon"
                        />
                      </span>
                    }
                    confirmLoading={false}
                    destroyOnClose={false}
                    focusTriggerAfterClose={true}
                    footer={null}
                    getContainer={[Function]}
                    getOpenCount={[Function]}
                    maskTransitionName="ant-fade"
                    motionName="ant-zoom"
                    okType="primary"
                    onCancel={[Function]}
                    onClose={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    onVisibleChanged={[Function]}
                    prefixCls="ant-modal"
                    scrollLocker={
                      ScrollLocker {
                        "getContainer": [Function],
                        "lock": [Function],
                        "lockTarget": 1,
                        "options": Object {
                          "container": <body
                            class="ant-scrolling-effect"
                            style="overflow: hidden; overflow-x: hidden; overflow-y: hidden;"
                          >
                            <div>
                              <div
                                class="ant-modal-root"
                              >
                                <div
                                  class="ant-modal-mask"
                                />
                                <div
                                  class="ant-modal-wrap"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="ant-modal"
                                    role="document"
                                    style="width: 520px;"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="ant-modal-content"
                                    >
                                      <div
                                        class="ant-modal-body"
                                      >
                                        <audio
                                          controls=""
                                          src="http://mockAudioSource.com"
                                        />
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                            <div>
                              <div
                                class="ant-modal-root"
                              >
                                <div
                                  class="ant-modal-mask"
                                />
                                <div
                                  class="ant-modal-wrap"
                                  role="dialog"
                                  tabindex="-1"
                                >
                                  <div
                                    class="ant-modal"
                                    role="document"
                                    style="width: 520px;"
                                  >
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                    <div
                                      class="ant-modal-content"
                                    >
                                      <div
                                        class="ant-modal-body"
                                      >
                                        <audio
                                          controls=""
                                          src="http://mockAudioSource.com"
                                        />
                                      </div>
                                    </div>
                                    <div
                                      aria-hidden="true"
                                      style="width: 0px; height: 0px; overflow: hidden; outline: none;"
                                      tabindex="0"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </body>,
                        },
                        "reLock": [Function],
                        "unLock": [Function],
                      }
                    }
                    switchScrollingEffect={[Function]}
                    title={null}
                    transitionName="ant-zoom"
                    visible={true}
                    width={520}
                    wrapClassName=""
                  >
                    <CSSMotion
                      motionName="ant-zoom"
                      onAppearPrepare={[Function]}
                      onEnterPrepare={[Function]}
                      onVisibleChanged={[Function]}
                      removeOnLeave={false}
                      visible={true}
                    >
                      <DomWrapper>
                        <div
                          className="ant-modal"
                          key="dialog-element"
                          onMouseDown={[Function]}
                          onMouseUp={[Function]}
                          role="document"
                          style={
                            Object {
                              "width": 520,
                            }
                          }
                        >
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                          <Component
                            shouldUpdate={true}
                          >
                            <div
                              className="ant-modal-content"
                            >
                              <div
                                className="ant-modal-body"
                              >
                                <audio
                                  controls={true}
                                  src="http://mockAudioSource.com"
                                />
                              </div>
                            </div>
                          </Component>
                          <div
                            aria-hidden="true"
                            style={
                              Object {
                                "height": 0,
                                "outline": "none",
                                "overflow": "hidden",
                                "width": 0,
                              }
                            }
                            tabIndex={0}
                          />
                        </div>
                      </DomWrapper>
                    </CSSMotion>
                  </Content>
                </div>
              </div>
            </Dialog>
          </Portal>
        </ForwardRef>
      </PortalWrapper>
    </Dialog>
  </Modal>
</PlayMedia>
`;
